# WordImperfect

./: .gitignore  CHANGELOG.md  EngineerGuide.md  README.md  pyproject.toml  readme.txt
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  data-model.md  release-support.md  technical-reference.md  writing-workflow.md
docs/downloads/: index.md  releases.json
docs/downloads/artifacts/: WordImperfect-0.1.0-linux-x64.AppImage  WordImperfect-0.1.0-macos-universal.dmg
docs/end-user-manual/: index.md
packaging/: wordimperfect.iss  wordimperfect.spec
packaging/msi/: .gitignore  README.md  WordImperfect.wxs  build.ps1
src/wordimperfect/: __init__.py  __main__.py  app.py
src/wordimperfect/controllers/: __init__.py  document_controller.py  editing_controller.py  formatting_controller.py  object_insertion_controller.py  text_styler.py
src/wordimperfect/dialogs/: __init__.py  find_replace_dialog.py
src/wordimperfect/services/: __init__.py  file_service.py  update_service.py
tests/: conftest.py  test_controllers_logic.py  test_document_controller.py  test_file_service.py  test_scaffolding.py  test_update_service.py
