[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordimperfect"
version = "0.1.0"
description = "Scaffolding for the WordImperfect imperfect information word game platform."
readme = "README.md"
authors = [
    { name = "WordImperfect Contributors" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "pytest>=8.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
target-version = ["py311"]
line-length = 88
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["wordimperfect"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "B", "UP", "N", "ANN", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["wordimperfect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

