[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wordimperfect"
version = "0.1.0"
description = "Scaffolding for the WordImperfect desktop word processor."
readme = "README.md"
authors = [
    { name = "WordImperfect Contributors" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "pytest>=8.1.0",
    "mypy>=1.9.0",
]
release = [
    "pyinstaller>=6.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wordimperfect" = ["py.typed"]

[tool.black]
target-version = ["py311"]
line-length = 88
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["wordimperfect"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["wordimperfect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
packages = ["wordimperfect"]
strict = true
warn_unused_configs = true
ignore_missing_imports = true

